--- a/support.html
+++ b/support.html
@@ -23,7 +23,7 @@ layout: default
     <ul class="support row">
      <li class="col-md-6">
         <p style="text-align:center"><img src="https://vufind.org/wiki/_media/community:membership_levels_and_benefits:rsp:healthnet.jpg?w=284&tok=10f7aa" alt="" /></p>
-        <a href="https://healthnet.org.np/">HealthNet Nepal</a> is a non-profit organization. It offers web hosting, training and support services for VuFind&reg; integrated with other open source software such as Koha, DSpace, SubjectsPlus, WordPress, and Drupal.
+        <a href="https://healthnet.org.np/">HealthNet Nepal</a> is a non-profit organization. It offers web hosting, training and support services for VuFind&reg; integrated with other open source software such as Koha, DSpace, SubjectsPlus, WordPress, and Drupal.<br />
         <a href="https://vufind.org/wiki/community:membership_levels_and_benefits:rsp:healthnet_nepal">Learn More</a>
      </li>
      <li class="col-md-6">
@@ -35,7 +35,7 @@ layout: default
 
     <ul class="support row">
      <li class="col-md-6">
-        <p style="text-align:center"><img src="https://vufind.org/wiki/_media/community:membership_levels_and_benefits:rsp:marca_orex.jpeg?w=150&tok=0335e9" alt="" /></p>
+        <p style="text-align:center"><img style="background-color: white; padding: 5px;" src="https://vufind.org/wiki/_media/community:membership_levels_and_benefits:rsp:marca_orex.jpeg?w=150&tok=0335e9" alt="" /></p>
         <a href="https://orex.es/productos/vufind/">Orex</a> - offers hosted VuFind&reg; service in Spain; customers in other countries should inquire about availability of services.<br />
         <a href="https://vufind.org/wiki/community:membership_levels_and_benefits:rsp:orex">Learn More</a>
      </li>
