--- a/support.html
+++ b/support.html
@@ -27,7 +27,7 @@ layout: default
         <a href="https://vufind.org/wiki/community:membership_levels_and_benefits:rsp:healthnet_nepal">Learn More</a>
      </li>
      <li class="col-md-6">
-        <p style="text-align:center"><img src="https://vufind.org/wiki/_media/community:membership_levels_and_benefits:rsp:marmot_logo_transparent_4.png?w=150&tok=60670b" alt="" /></p>
+        <p style="text-align:center"><img style="background-color: white; padding: 5px;" src="https://vufind.org/wiki/_media/community:membership_levels_and_benefits:rsp:marmot_logo_transparent_4.png?w=150&tok=60670b" alt="" /></p>
         <a href="https://marmot.org/">Marmot Library Network, Inc.</a> - a non-profit consortium of academic, public, and school libraries, primarily serving the libraries of Colorado.<br />
         <a href="https://vufind.org/wiki/community:membership_levels_and_benefits:rsp:marmot">Learn More</a>
      </li>
@@ -35,7 +35,7 @@ layout: default
 
     <ul class="support row">
      <li class="col-md-6">
-        <p style="text-align:center"><img style="background-color: white; padding: 5px;" src="https://vufind.org/wiki/_media/community:membership_levels_and_benefits:rsp:marca_orex.jpeg?w=150&tok=0335e9" alt="" /></p>
+        <p style="text-align:center"><img src="https://vufind.org/wiki/_media/community:membership_levels_and_benefits:rsp:marca_orex.jpeg?w=150&tok=0335e9" alt="" /></p>
         <a href="https://orex.es/productos/vufind/">Orex</a> - offers hosted VuFind&reg; service in Spain; customers in other countries should inquire about availability of services.<br />
         <a href="https://vufind.org/wiki/community:membership_levels_and_benefits:rsp:orex">Learn More</a>
      </li>
