--- a/schedule.html
+++ b/schedule.html
@@ -5,6 +5,12 @@ layout: default
   <div class="col-md-6">
     <h2>Conference Schedule</h2>
     <quote>
+      <b>August 2023</b>
+      <a href="https://openlibraryfoundation.org/about/wolfcon/upcoming/">WOLFcon 2023</a> / <a href="https://vufind.org/wiki/community:conferences:summit_2023">VuFind® Summit 2023</a><br />
+      Chicago, Illinois, United States / Online - August 22-24, 2023<br/>
+      WOLFcon 2023 will incorporate the 2023 VuFind® Summit, with most sessions held in a hybrid in-person/online format. Online participation is free! Please join us either in Chicago or online!
+    </quote>
+    <quote>
       <b>September 2022</b>
       <a href="https://vufind.org/wiki/community:conferences:summit_2022">Virtual VuFind® Summit 2022</a><br />
       Online - September 7, 2022<br/>
