--- a/schedule.html
+++ b/schedule.html
@@ -283,13 +283,19 @@ of the annual German and American VuFind® Summits and was held entirely online.
     <h2>Past Presentations</h2>
     Many past presentations can be found on VuFind®'s <a href="https://vufind.org/wiki/videos">video page</a>. A few are highlighted below.
     <div class="text-center">
+      <iframe width="420" height="315" src="https://www.youtube.com/embed/6-eI0-ofCRg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <br/>The "state of the project" presentation from the 2022 VuFind® Summit; click the Summit links in the left column for many more videos from past events.
+      <br/<br/>
+
       <iframe width="420" height="315" src="https://www.youtube.com/embed/Lb5OCqeAUv0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       <br/>The "state of the project" presentation from the 2017 VuFind® Summit; click the Summit links in the left column for many more videos from past events.
       <br/<br/>
 
+<!-- disabled since this refers to obsolete OCLC tech:
       <iframe width="420" height="315" src="//www.youtube.com/embed/E7vvR8qaiuQ" frameborder="0" allowfullscreen></iframe>
       <br/>Demian Katz describes how VuFind® uses WorldCat Identities and OCLC Terminology Services to provide users with suggested terms.
       <br/><br/>
+-->
 
       <iframe src="//player.vimeo.com/video/951800" width="500" height="375" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       <br/><a href="http://vimeo.com/951800">Andrew Nagy and Chris Barr talk about VuFind®</a> from <a href="http://vimeo.com/user455908">Paul Albert</a> on <a href="https://vimeo.com">Vimeo</a>.
