Add IDs to headings.

--- a/support.html
+++ b/support.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="row">
   <div class="col-md-12">
-    <h2>Registered Service Providers</h2>
+    <h2 id="rsp">Registered Service Providers</h2>
 
     Registered Service Providers have a proven track record of active engagement with the VuFind&reg; software and contribute an annual fee to support the project. You can learn more about this program (and submit an application for your own organization) at the <a href="https://vufind.org/wiki/community:membership_levels_and_benefits:rsp">Registered Service Provider Program</a> page.<br /><br />
 
@@ -41,7 +41,7 @@ layout: default
      </li>
     </ul>
 
-    <h2>Community Support</h2>
+    <h2 id="community">Community Support</h2>
 
     Free online VuFind&reg; support is available through multiple channels:<br/><br/>
 
@@ -59,13 +59,13 @@ layout: default
       <li><strong>VuFind&reg; on IRC</strong> - For real-time discussion of VuFind&reg;, try joining the vufind channel at <a href="http://webchat.freenode.net/?channels=vufind">freenode</a>.</li>
     </ul>
 
-    <h2>Issue Tracking</h2>
+    <h2 id="issues">Issue Tracking</h2>
 
     <p><b><a href="http://vufind.org/jira/browse/VUFIND">JIRA Issue Tracker</a></b></p>
 
     <p>You can search through the issue archive to see if the problem you may be experiencing has been fixed or not. You can also place bug reports, feature enhancement requests and patches. Issue Tracker is managed with the <a href="http://www.atlassian.com/software/jira">Atlassian JIRA software</a>.</p>
 
-    <h2>Additional Service Providers</h2>
+    <h2 id="other_providers">Additional Service Providers</h2>
    
     The list below includes additional known VuFind&reg; service providers who have not yet joined the RSP program. Please note that this directory is provided for the convenience of the VuFind&reg; community; no specific endorsement is implied.<br /><br />
 
