--- a/schedule.html
+++ b/schedule.html
@@ -8,7 +8,7 @@ layout: default
       <b>August 2023</b>
       <a href="https://openlibraryfoundation.org/about/wolfcon/upcoming/">WOLFcon 2023</a> / <a href="https://vufind.org/wiki/community:conferences:summit_2023">VuFind® Summit 2023</a><br />
       Chicago, Illinois, United States / Online - August 22-24, 2023<br/>
-      WOLFcon 2023 will incorporate the 2023 VuFind® Summit, with most sessions held in a hybrid in-person/online format. Online participation is free! Please join us either in Chicago or online!
+      WOLFcon 2023 incorporated the 2023 VuFind® Summit, with most sessions held in a hybrid in-person/online format. See the <a href="https://vufind.org/wiki/community:conferences:summit_2023">wiki</a> for details, including slides and recordings.
     </quote>
     <quote>
       <b>September 2022</b>
