--- a/support.html
+++ b/support.html
@@ -10,7 +10,7 @@ layout: default
     <ul class="support row">
       <li class="col-md-6">
         <p style="text-align:center"><img src="https://vufind.org/wiki/_media/community:membership_levels_and_benefits:rsp:effective_webwork_logo.png?w=200&tok=89dbee" alt="" style="padding: 0 10px; background-color: white;" /></p>
-        <a href="https://www.effective-webwork.de/">effective WEBWORK</a> - is a company based in Hamburg, Germany. It provides support for the implementation and customization of VuFind&reg;, also including hosting and integration with other digital library services, as well as related consultancy work.<br />
+        <a href="https://www.effective-webwork.de/">effective WEBWORK</a> is a company based in Hamburg, Germany. It provides support for the implementation and customization of VuFind&reg;, also including hosting and integration with other digital library services, as well as related consultancy work.<br />
         <a href="https://vufind.org/wiki/community:membership_levels_and_benefits:rsp:effective_webwork">Learn More</a>
       </li>
       <li class="col-md-6">
@@ -22,18 +22,23 @@ layout: default
 
     <ul class="support row">
      <li class="col-md-6">
-        <p style="text-align:center"><img src="https://vufind.org/wiki/_media/community:membership_levels_and_benefits:rsp:healthnet.jpg?w=284&tok=10f7aa" alt="" /></p>
+        <p style="text-align:center; margin-top:53px"><img src="https://vufind.org/wiki/_media/community:membership_levels_and_benefits:rsp:healthnet.jpg?w=284&tok=10f7aa" alt="" /></p>
         <a href="https://healthnet.org.np/">HealthNet Nepal</a> is a non-profit organization. It offers web hosting, training and support services for VuFind&reg; integrated with other open source software such as Koha, DSpace, SubjectsPlus, WordPress, and Drupal.<br />
         <a href="https://vufind.org/wiki/community:membership_levels_and_benefits:rsp:healthnet_nepal">Learn More</a>
      </li>
      <li class="col-md-6">
-        <p style="text-align:center"><img style="background-color: white; padding: 5px;" src="https://vufind.org/wiki/_media/community:membership_levels_and_benefits:rsp:marmot_logo_transparent_4.png?w=150&tok=60670b" alt="" /></p>
-        <a href="https://marmot.org/">Marmot Library Network, Inc.</a> - a non-profit consortium of academic, public, and school libraries, primarily serving the libraries of Colorado.<br />
-        <a href="https://vufind.org/wiki/community:membership_levels_and_benefits:rsp:marmot">Learn More</a>
+        <p style="text-align:center"><img src="https://vufind.org/wiki/_media/community:membership_levels_and_benefits:rsp:newindexdatalogo.gif?w=89&tok=272a06" alt="" /></p>
+        <a href="https://www.indexdata.com/">Index Data</a> provides support for VuFind®, FOLIO, and ReShare as part of its hosted services for libraries all over the world. Open Source software is at the core of Index Data services, and it provides consulting, custom development, and hosting to match the unique needs of each library.<br />
+        <a href="https://vufind.org/wiki/community:membership_levels_and_benefits:rsp:indexdata">Learn More</a>
      </li>
     </ul>
 
     <ul class="support row">
+     <li class="col-md-6">
+        <p style="text-align:center"><img style="background-color: white; padding: 5px;" src="https://vufind.org/wiki/_media/community:membership_levels_and_benefits:rsp:marmot_logo_transparent_4.png?w=150&tok=60670b" alt="" /></p>
+        <a href="https://marmot.org/">Marmot Library Network, Inc.</a> is a non-profit consortium of academic, public, and school libraries, primarily serving the libraries of Colorado.<br />
+        <a href="https://vufind.org/wiki/community:membership_levels_and_benefits:rsp:marmot">Learn More</a>
+     </li>
      <li class="col-md-6">
         <p style="text-align:center"><img src="https://vufind.org/wiki/_media/community:membership_levels_and_benefits:rsp:marca_orex.jpeg?w=150&tok=0335e9" alt="" /></p>
         <a href="https://orex.es/productos/vufind/">Orex</a> - offers hosted VuFind&reg; service in Spain; customers in other countries should inquire about availability of services.<br />
