--- a/about.html
+++ b/about.html
@@ -5,16 +5,25 @@ layout: default
   <div class="col-sm-6">
     <h2>About VuFind®</h2>
 
-    VuFind® is a library resource portal designed and developed for libraries by libraries. The goal of VuFind® is to enable your users to search and browse through all of your library's resources by replacing the traditional OPAC to include:
+    <p>
+      VuFind® is a discovery system designed and developed for libraries by libraries, but also suitable for use
+      in other types of organizations. The goal of VuFind® is to enable your users to search and browse through all
+      of your resources in a single consistent and user-friendly interface. This could include:
+    </p>
     <ul>
-      <li>Catalog Records
-      <li>Digital Library Items
-      <li>Institutional Repository
-      <li>Institutional Bibliography
-      <li>Other Library Collections and Resources
+      <li>Catalog Records</li>
+      <li>Digital Library Items</li>
+      <li>Institutional Repository Content</li>
+      <li>Institutional Bibliography Entries</li>
+      <li>Locally Hosted Journal Articles</li>
+      <li>Other Library Collections and Resources</li>
     </ul>
-
-    VuFind® is completely modular, so you can implement just the basic system or all of the components. Since it's open source, you can modify or add modules to best fit your needs. A wide range of configurable options allow extensive customization without changing any code.
+    <p>
+      VuFind® is completely modular, so you can implement just the basic system, or all of the components. It
+      supports building a local index and/or integrating with a variety of subscription services. And since it's
+      open source, you can modify the code to best fit your need or you can add new modules to extend your
+      resource offerings.
+    </p>
 
     <h2>Power</h2>
     VuFind® runs on Solr Energy. Apache Solr, an open source search engine, offers amazing performance and scalability to allow for VuFind® to respond to search queries in milliseconds time. It has the ability to be distributed if you need to spread the load of the catalog over many servers or in a server farm environment.
