--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@ layout: default
 <div class="row">
   <div class="col-sm-6 content">
     <p>
-      VuFind® is a library resource portal designed and developed for libraries by libraries.
-      The goal of VuFind® is to enable your users to search and browse through all of your
-      library's resources by replacing the traditional OPAC to include:
-      </p><ul>
-        <li>Catalog Records</li>
-        <li>Locally Cached Journals</li>
-        <li>Digital Library Items</li>
-        <li>Institutional Repository</li>
-        <li>Institutional Bibliography</li>
-        <li>Other Library Collections and Resources</li>
-      </ul>
-    <p></p>
+      VuFind® is a discovery system designed and developed for libraries by libraries, but also suitable for use
+      in other types of organizations. The goal of VuFind® is to enable your users to search and browse through all
+      of your resources in a single consistent and user-friendly interface. This could include:
+    </p>
+    <ul>
+      <li>Catalog Records</li>
+      <li>Digital Library Items</li>
+      <li>Institutional Repository Content</li>
+      <li>Institutional Bibliography Entries</li>
+      <li>Locally Hosted Journal Articles</li>
+      <li>Other Library Collections and Resources</li>
+    </ul>
     <p>
-      VuFind® is completely modular so you can implement just the basic system,
-      or all of the components. And since it's open source, you can modify the modules to
-      best fit your need or you can add new modules to extend your resource offerings.
+      VuFind® is completely modular, so you can implement just the basic system, or all of the components. It
+      supports building a local index and/or integrating with a variety of subscription services. And since it's
+      open source, you can modify the code to best fit your need or you can add new modules to extend your
+      resource offerings.
     </p>
     <a href="https://vufind.org/demo" class="demo-button">Live Demo</a>
     <br />
