--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ layout: default
     </ul>
     <p>
       VuFind® is completely modular, so you can implement just the basic system, or all of the components. It
-      supports building a local index and/or integrating with a variety of subscription services. And since it's
-      open source, you can modify the code to best fit your need or you can add new modules to extend your
-      resource offerings.
+      supports building a local index and/or integrating with a variety of subscription services. Since it's open
+      source, you can modify or add modules to best fit your needs. A wide range of configurable options allow
+      extensive customization without changing any code.
     </p>
     <a href="https://vufind.org/demo" class="demo-button">Live Demo</a>
     <br />
