Revised/expanded text.

--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@ layout: default
     <h2>About VuFind®</h2>
 
     <p>
-      VuFind® is a discovery system designed and developed for libraries by libraries, but also suitable for use
-      in other types of organizations. The goal of VuFind® is to enable your users to search and browse through all
-      of your resources in a single consistent and user-friendly interface. This could include:
+      VuFind® is a discovery system designed and developed for libraries by libraries, and also suitable for building
+      search interfaces to all kinds of content. The goal of VuFind® is to enable your users to search and browse
+      through all of your resources in a single consistent and user-friendly interface. Content could include:
     </p>
     <ul>
       <li>Catalog Records</li>
@@ -19,10 +19,12 @@ layout: default
       <li>Other Library Collections and Resources</li>
     </ul>
     <p>
-      VuFind® is completely modular, so you can implement just the basic system, or all of the components. It
-      supports building a local index and/or integrating with a variety of subscription services. Since it's open
-      source, you can modify or add modules to best fit your needs. A wide range of configurable options allow
-      extensive customization without changing any code.
+      VuFind® is completely modular and includes tools to support a wide range of use cases, from a basic Library
+      catalog search to a complex "Bento Box" incorporating data from many sources. It supports building a local
+      index and/or integrating with a variety of existing third-party services. Since it's open source, you can modify or
+      add modules to best fit your needs. A wide range of configurable options allow extensive customization without
+      changing any code. An active and friendly community and a variety of commercial service providers mean that you
+      can get support when you need it.
     </p>
 
     <h2>Power</h2>
