Tweak bulleted list.

--- a/about.html
+++ b/about.html
@@ -11,12 +11,12 @@ layout: default
       through all of your resources in a single consistent and user-friendly interface. Content could include:
     </p>
     <ul>
-      <li>Catalog Records</li>
-      <li>Digital Library Items</li>
-      <li>Institutional Repository Content</li>
-      <li>Institutional Bibliography Entries</li>
-      <li>Locally Hosted Journal Articles</li>
-      <li>Other Library Collections and Resources</li>
+      <li>Catalog records</li>
+      <li>Institutional repository content</li>
+      <li>Locally hosted journal articles</li>
+      <li>Digitized library materials</li>
+      <li>Items available for interlibrary loan</li>
+      <li>Other collections and resources &mdash; just add metadata!</li>
     </ul>
     <p>
       VuFind® is completely modular and includes tools to support a wide range of use cases, from a basic Library
