--- a/index.html
+++ b/index.html
@@ -4,25 +4,30 @@ layout: default
 <div class="row">
   <div class="col-sm-6 content">
     <p>
-      VuFind® is a discovery system designed and developed for libraries by libraries, and also suitable for building
-      search interfaces to all kinds of content. The goal of VuFind® is to enable your users to search and browse
-      through all of your resources in a single consistent and user-friendly interface. Content could include:
+      VuFind® is a discovery system designed and developed for libraries by libraries. It is also flexible enough
+      to build search interfaces for all kinds of content beyond the library environment. The goal of VuFind® is
+      to enable your users to search and browse through all of your resources in a single consistent and user-friendly
+      interface. Content could include:
     </p>
     <ul>
       <li>Catalog records</li>
       <li>Institutional repository content</li>
-      <li>Locally hosted journal articles</li>
+      <li>Open access journal articles</li>
       <li>Digitized library materials</li>
+      <li>Websites</li>
       <li>Items available for interlibrary loan</li>
+      <li>Licensed content (where supported by providers)</li>
       <li>Other collections and resources &mdash; just add metadata!</li>
     </ul>
     <p>
       VuFind® is completely modular and includes tools to support a wide range of use cases, from a basic Library
       catalog search to a complex "Bento Box" incorporating data from many sources. It supports building a local
-      index and/or integrating with a variety of existing third-party services. Since it's open source, you can modify or
-      add modules to best fit your needs. A wide range of configurable options allow extensive customization without
-      changing any code. An active and friendly community and a variety of commercial service providers mean that you
-      can get support when you need it.
+      index and/or integrating with a variety of existing third-party services. Since it's
+      <a href="https://github.com/vufind-org/">open source</a>, you can modify or add modules to best fit your needs.
+      A wide range of configurable options allow extensive customization without changing any code. An active and
+      friendly international <a href="https://vufind.org/wiki/community">community</a> and a variety of
+      <a href="https://vufind.org/vufind/support.html">commercial service providers</a> mean that you can get
+      support when you need it.
     </p>
     <a href="https://vufind.org/demo" class="demo-button">Live Demo</a>
     <br />
