Remove Bento Box wording.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
     </ul>
     <p>
       VuFind® is completely modular and includes tools to support a wide range of use cases, from a basic Library
-      catalog search to a complex "Bento Box" incorporating data from many sources. It supports building a local
+      catalog search to a sophisticated dashboard of data from many sources. It supports building a local
       index and/or integrating with a variety of existing third-party services. Since it's
       <a href="https://github.com/vufind-org/">open source</a>, you can modify or add modules to best fit your needs.
       A wide range of configurable options allow extensive customization without changing any code. An active and
