Update project description on web page. (#3137)

--- a/about.html
+++ b/about.html
@@ -5,16 +5,32 @@ layout: default
   <div class="col-sm-6">
     <h2>About VuFind®</h2>
 
-    VuFind® is a library resource portal designed and developed for libraries by libraries. The goal of VuFind® is to enable your users to search and browse through all of your library's resources by replacing the traditional OPAC to include:
+    <p>
+      VuFind® is a discovery system designed and developed for libraries by libraries. It is also flexible enough
+      to build search interfaces for all kinds of content beyond the library environment. The goal of VuFind® is
+      to enable your users to search and browse through all of your resources in a single consistent and user-friendly
+      interface. Content could include:
+    </p>
     <ul>
-      <li>Catalog Records
-      <li>Digital Library Items
-      <li>Institutional Repository
-      <li>Institutional Bibliography
-      <li>Other Library Collections and Resources
+      <li>Catalog records</li>
+      <li>Institutional repository content</li>
+      <li>Open access journal articles</li>
+      <li>Digitized library materials</li>
+      <li>Websites</li>
+      <li>Items available for interlibrary loan</li>
+      <li>Licensed content (where supported by providers)</li>
+      <li>Other collections and resources &mdash; just add metadata!</li>
     </ul>
-
-    VuFind® is completely modular, so you can implement just the basic system or all of the components. Since it's open source, you can modify or add modules to best fit your needs. A wide range of configurable options allow extensive customization without changing any code.
+    <p>
+      VuFind® is completely modular and includes tools to support a wide range of use cases, from a basic Library
+      catalog search to a sophisticated dashboard of data from many sources. It supports building a local
+      index and/or integrating with a variety of existing third-party services. Since it's
+      <a href="https://github.com/vufind-org/">open source</a>, you can modify or add modules to best fit your needs.
+      A wide range of configurable options allow extensive customization without changing any code. An active and
+      friendly international <a href="https://vufind.org/wiki/community">community</a> and a variety of
+      <a href="https://vufind.org/vufind/support.html">commercial service providers</a> mean that you can get
+      support when you need it.
+    </p>
 
     <h2>Power</h2>
     VuFind® runs on Solr Energy. Apache Solr, an open source search engine, offers amazing performance and scalability to allow for VuFind® to respond to search queries in milliseconds time. It has the ability to be distributed if you need to spread the load of the catalog over many servers or in a server farm environment.
