Put buttons inside paragraph.

--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@ layout: default
         &rsaquo;
       </a>
     </div>
-    <a href="https://vufind.org/demo" class="demo-button">Live Demo</a>
-    <br />
-    <a href="https://vufind.org/wiki/videos" class="demo-button">Video Tutorials</a>
+    <p>
+      <a href="https://vufind.org/demo" class="demo-button">Live Demo</a><br />
+      <a href="https://vufind.org/wiki/videos" class="demo-button">Video Tutorials</a>
+    </p>
   </div>
 </div>
 <script type="text/javascript">
