--- a/index.html
+++ b/index.html
@@ -99,10 +99,8 @@ layout: default
         &rsaquo;
       </a>
     </div>
-    <p>
-      <a href="https://vufind.org/demo" class="demo-button">Live Demo</a><br />
-      <a href="https://vufind.org/wiki/videos" class="demo-button">Video Tutorials</a>
-    </p>
+    <br /><a href="https://vufind.org/demo" class="demo-button">Live Demo</a>
+    <br /><a href="https://vufind.org/wiki/videos" class="demo-button">Video Tutorials</a>
   </div>
 </div>
 <script type="text/javascript">
