Update contact email.

--- a/schedule.html
+++ b/schedule.html
@@ -278,7 +278,7 @@ of the annual German and American VuFind® Summits and was held entirely online.
 
     We would love to present VuFind® at your next conference.
     Feel free to contact us about scheduling a presentation.<br/>
-    <a href="mailto:demian.katz@villanova.edu">demian.katz@villanova.edu</a>
+    <a href="mailto:info@vufind.org">info@vufind.org</a>
 
     <h2>Past Presentations</h2>
     Many past presentations can be found on VuFind®'s <a href="https://vufind.org/wiki/videos">video page</a>. A few are highlighted below.
