Restructure and update about page.

--- a/about.html
+++ b/about.html
@@ -32,17 +32,17 @@ layout: default
       support when you need it.
     </p>
 
-    <h2>Power</h2>
-    VuFind® runs on Solr Energy. Apache Solr, an open source search engine, offers amazing performance and scalability to allow for VuFind® to respond to search queries in milliseconds time. It has the ability to be distributed if you need to spread the load of the catalog over many servers or in a server farm environment.
+    <h2>Power and Flexibility</h2>
+    VuFind®'s search index runs on Apache Solr, an open source search engine, offering amazing performance and scalability. It has the ability to be distributed if you need to spread the load of the catalog over many servers or in a cloud environment. If you don't need to run your own local index, or if you want to complement it with third-party content, VuFind® can also talk to <a href="https://vufind.org/wiki/configuration:third-party_content">a variety of other tools and services</a>.
 
     <h2>Licensing</h2>
     VuFind® is offered for free through the GPL open source license. This means that you can use the software for free. You can modify the software and share your successes with the community!
 
-    <h2>VuFind® in Action</h2>
-    Take a look at our <a href="https://vufind.org/wiki/community:installations">VuFind® Installations Wiki page</a> to see how a variety of organizations have taken advantage of VuFind®'s flexibility. If you are already using VuFind®, feel free to edit the page and share your accomplishments.
   </div>
   <div class="col-sm-6">
     <img src="https://vufind.org/images/magnify.png"/>
+    <h2>VuFind® in Action</h2>
+    Take a look at our <a href="https://vufind.org/wiki/community:installations">VuFind® Installations Wiki page</a> to see how a variety of organizations have taken advantage of VuFind®'s flexibility. If you are already using VuFind®, tell us about it through our <a href="https://vufind.org/advanced_demo/Feedback/Form/InstallationReport">Installation Report form</a>.
     <h2>Praise for VuFind®</h2>
     <quote>
       <b>"This completely rules, as you kids say."</b>
