Update support page.

--- a/support.html
+++ b/support.html
@@ -57,21 +57,19 @@ layout: default
 
       <li><a href="https://lists.sourceforge.net/mailman/listinfo/vufind-admins">VuFind&reg; Admins</a> - A mailing list for discussing management of the VuFind&reg; project.</li>
 
-      <li><a href="https://lists.lehigh.edu/mailman/listinfo/vufind-unicorn-l">VuFind&reg; Unicorn Users</a> - A mailing list for SirsiDynix Unicorn users who are using VuFind&reg;.</li>
-
       <li><a href="http://vufind.slack.com/">VuFind&reg; on Slack</a> - Email info@vufind.org for an invitation to the Slack if you cannot sign up directly.</li>
 
-      <li><strong>VuFind&reg; on IRC</strong> - For real-time discussion of VuFind&reg;, try joining the vufind channel at <a href="http://webchat.freenode.net/?channels=vufind">freenode</a>.</li>
+      <li><a href="https://github.com/vufind-org/vufind/discussions">GitHub Discussions</a> - A web-based system where project discussions can take place.</li>
     </ul>
 
     <h2 id="issues">Issue Tracking</h2>
 
     <p><b><a href="http://vufind.org/jira/browse/VUFIND">JIRA Issue Tracker</a></b></p>
 
-    <p>You can search through the issue archive to see if the problem you may be experiencing has been fixed or not. You can also place bug reports, feature enhancement requests and patches. Issue Tracker is managed with the <a href="http://www.atlassian.com/software/jira">Atlassian JIRA software</a>.</p>
+    <p>You can search through the issue archive to see if the problem you may be experiencing has been fixed or not. You can also place bug reports and feature enhancement requests. Issue Tracker is managed with the <a href="http://www.atlassian.com/software/jira">Atlassian JIRA software</a>.</p>
 
     <h2 id="other_providers">Additional Service Providers</h2>
-   
+
     The list below includes additional known VuFind&reg; service providers who have not yet joined the RSP program. Please note that this directory is provided for the convenience of the VuFind&reg; community; no specific endorsement is implied.<br /><br />
 
     <ul class="support">
