--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@ layout: default
       support when you need it.
     </p>
 
-    <h2>Power and Flexibility</h2>
+    <h2>Powerful and Flexible Search Capabilities</h2>
     VuFind®'s search index runs on Apache Solr, an open source search engine, offering amazing performance and scalability. It has the ability to be distributed if you need to spread the load of the catalog over many servers or in a cloud environment. If you don't need to run your own local index, or if you want to complement it with third-party content, VuFind® can also talk to <a href="https://vufind.org/wiki/configuration:third-party_content">a variety of other tools and services</a>.
 
-    <h2>Licensing</h2>
+    <h2>Open Licensing</h2>
     VuFind® is offered for free through the GPL open source license. This means that you can use the software for free. You can modify the software and share your successes with the community!
 
   </div>
