--- a/features.html
+++ b/features.html
@@ -79,7 +79,7 @@ layout: default
     </quote>
 
     <quote>
-      <b>Integration with Content Providers</b>
+      <b>Enhance Record Displays with Content Providers</b>
       VuFind® can incorporate data from
       <a href="https://vufind.org/wiki/configuration:external_content">a variety of third-party services</a>
       to enhance the user experience with content like cover images, reviews, author biographies,
