--- a/features.html
+++ b/features.html
@@ -3,25 +3,24 @@ layout: default
 ---
 <h2>Features</h2>
 <div class="video">
-  <iframe src="//player.vimeo.com/video/1239618" width="500" height="333" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  <a href="http://www.vimeo.com/1239618?pg=embed&amp;sec=1239618">VuFind®: Social Features</a> from
-  <a href="http://www.vimeo.com/user433393?pg=embed&amp;sec=1239618">Falvey Memorial Library</a> on
-  <a href="http://vimeo.com?pg=embed&amp;sec=1239618">Vimeo</a>.
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/6Nf6sDSlQqg?si=p00c27j_OD-z5BL8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <a href="https://www.youtube.com/watch?v=6Nf6sDSlQqg">Introduction to VuFind®</a> from <a href="https://openlibraryfoundation.org/about/wolfcon/">WOLFcon 2021</a>
 </div>
 
 <div class="row">
   <div class="col-md-6">
     <quote>
       <b>Search with Faceted Results</b>
-      The search system allows for the user to search from a basic search box
-      and then to be able to narrow down the results by clicking on the various facets of the results.
+      The search system allows the user to search from a basic search box
+      and then narrow down the results by clicking on facet values found in the matching records.
     </quote>
 
     <quote>
-      <b>Live Record Status and Location with Ajax Querying</b>
+      <b>Real Time Record Status and Location Information</b>
       The search results page is able to display the live status of a record
-      through the use of AJAX by querying the catalog at that exact moment.
-      And since it is done through AJAX after the results have loaded, the page will not slow down for any reason.
+      through real-time querying of the underlying catalog system.
+      This allows the best of both worlds: fast retrieval of search results,
+      and accurate reporting of item availability.
     </quote>
 
     <quote>
@@ -30,58 +29,61 @@ layout: default
     </quote>
 
     <quote>
-      <b>Save Resources to Organized Lists</b>
-      The user has the ability to save the resources from both the search results page
-      and from the record view page to their own customizable lists.
-      The lists can be retrieved at any time and will always be there for the user.
-      This helps to eliminate the need for desktop based citation management software
-      that tends to be too difficult for basic users.
-      This makes it simple for all users!
+      <b>Save Resources to "Favorites" Lists</b>
+      The user can save resources from both the search results page
+      and the record view page to their own customizable lists.
+      The lists can be kept private by the user or made public and shared with others via URL.
     </quote>
 
     <quote>
       <b>Browse for Resources</b>
-      The user has the ability to browse the catalog allowing them to explore what the library has
-      rather than only being able to see a very narrow spectrum of results.
+      In addition to searching, the user can explore the collection and serendipitously discover useful
+      resources through a variety of browsing mechanisms, including
+      <a href="https://vufind.org/wiki/indexing:alphabetical_heading_browse">alphabetical heading browse</a>,
+      facet-driven category browse, and <a href="https://vufind.org/wiki/configuration:channels">channels</a>.
     </quote>
 
   </div>
   <div class="col-md-6">
     <quote>
-      <b>Author Biographies</b>
-      The user can learn more about the author with contextual information and
-      see all of the books that they have written in the library.
-    </quote>
-
-    <quote>
       <b>Persistent URLs</b>
-      Allows the user to bookmark their queries or records to allow permanent access to a page they were once on.
+      Search and record pages never change their URLs, allowing users to easily bookmark and share queries
+      and other useful content.
     </quote>
 
     <quote>
-      <b>Zotero Compatible</b>
+      <b>Compatible with Reference Management Tools</b>
       Your users can save and tag any records with
-      <a href="http://www.zotero.org/">Zotero</a> or any other
-      <a href="http://ocoins.info/">COinS</a> based application so they
-      can store their records in one place.
+      <a href="http://www.zotero.org/">Zotero</a> and other commonly used reference management tools.
+      Data is embedded using the <a href="https://en.wikipedia.org/wiki/COinS">COinS</a> standard and
+      can also be <a href="https://vufind.org/wiki/development:howtos:supporting_a_new_export_format">exported</a>
+      in a variety of ways.
     </quote>
 
     <quote>
       <b>Internationalization</b>
-      The interface has translations available in Arabic, Brazilian Portuguese, Chinese,
-      Dutch, English, French, German, Japanese, Spanish and many more. And if you
-      want to create your own translation - it's easy.  You can even create a new English
-      translation if you want to change some of the wording used in the interface -
-      it makes the UI that much easier to customize.
+      The interface has translations available in more than thirty languages, including
+      Arabic, Brazilian Portuguese, Chinese, Dutch, English, French, German, Japanese and Spanish.
+      <a href="https://vufind.org/wiki/development:architecture:localization">Supporting new languages</a> is easy,
+      and you can also override translations to adjust the user interface without changing any templates or code.
     </quote>
 
     <quote>
-      <b>Access Your Data: Open Search, OAI, Solr</b>
+      <b>Access Your Data: OAI-PMH, APIs, Solr</b>
       VuFind® has many APIs to interact with the search, data and many other features.
-      You can syndicate your record data with other institutions via an OAI server.
-      You can search using VuFind®'s algorithms via OpenSearch.
-      And if you want complete access to your indexed data, you can interact with Solr,
+      You can syndicate your record data with other institutions via an
+      <a href="https://vufind.org/wiki/indexing:tracking_record_changes#oai-pmh_server_functionality">OAI server</a>.
+      You can search using VuFind®'s algorithms via its <a href="https://vufind.org/wiki/development:apis">built-in APIs</a>.
+      And if you want complete access to your indexed data, you can interact directly with Solr,
       VuFind®'s backend search and index engine.
+    </quote>
+
+    <quote>
+      <b>Enhance Record Displays with Content Providers</b>
+      VuFind® can incorporate data from
+      <a href="https://vufind.org/wiki/configuration:external_content">a variety of third-party services</a>
+      to enhance the user experience with content like cover images, reviews, author biographies,
+      and more!
     </quote>
   </div>
 </div>
