--- a/schedule.html
+++ b/schedule.html
@@ -5,6 +5,12 @@ layout: default
   <div class="col-md-6">
     <h2>Conference Schedule</h2>
     <quote>
+      <b>September 2024</b>
+      <a href="https://openlibraryfoundation.org/about/wolfcon/upcoming/">WOLFcon 2024</a><br />
+      London, England / Online - September 24-26, 2024<br/>
+      WOLFcon 2024 will include VuFind® content. More details will be shared as planning is completed!
+    </quote>
+    <quote>
       <b>August 2023</b>
       <a href="https://openlibraryfoundation.org/about/wolfcon/upcoming/">WOLFcon 2023</a> / <a href="https://vufind.org/wiki/community:conferences:summit_2023">VuFind® Summit 2023</a><br />
       Chicago, Illinois, United States / Online - August 22-24, 2023<br/>
